--- a/Employee-Working-Hours-Analysis-with-Anomaly-Detection.ipynb
+++ b/Employee-Working-Hours-Analysis-with-Anomaly-Detection.ipynb
@@ -14,12 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "93e92377-962c-4e34-8aa3-15e3e424bd7f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(42)"
+    "np.random.seed()"
    ]
   },
   {
